fix comments